--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246400.md#1" title="香港股市大跌 恒生地产一度下挫2000点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/c446350f9ae75b6d78c1d2f7a679fc6e-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246164.md#1" title="慕岳：中共急于加入CPTPP 透背后四大动机""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192590-1-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://uimzxm315.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247702.md#1">【拍案惊奇】周薄反习势力大？党媒提林彪集团</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248335.md#1">欲借预算法案特赦800万非法移民 美民主党受阻</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247593.md#1">【微视频】美英澳同盟共建核潜艇 台湾防御增强</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248235.md#1">美国证监会发警告 投资在美上市中企有风险</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248182.md#1">美失踪情侣案现新线索 FBI搜查未婚夫家</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248335.md#1">欲借预算法案特赦800万非法移民 美民主党受阻</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247593.md#1">【微视频】美英澳同盟共建核潜艇 台湾防御增强</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248235.md#1">美国证监会发警告 投资在美上市中企有风险</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248182.md#1">美失踪情侣案现新线索 FBI搜查未婚夫家</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247977.md#1">法轮功学员范淑英遭黑龙江女监迫害离世</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248292.md#1">【直播】美智库：病毒溯源与中共的掩盖</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244481.md#1">【一线采访】莆田病例急攀升 民众：大型灾难事件</a><br>
@@ -99,7 +99,7 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13239022.md#1">【微视频】中国煤价新高 电费要大涨 冬天难熬</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13238684.md#1">官方救不救恒大？大陆投行人士析风暴来临</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.47.83.43/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,646</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.231.44.43/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,646</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -113,10 +113,10 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13222817.md#1">【独家】文件泄河南公安隐形捞钱方式</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13214082.md#1">【内幕】文件泄河南商丘稳控访民名单</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13220489.md#1">【独家】讲真相活动 辽宁当局最惧怕</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13226114.md#1">中秋节不烤肉赏回文诗 正读思妻反读思夫两相思</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234239.md#1">【未解之谜】穿越时空 二战飞行员的奇遇</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/2/n13204305.md#1">《普桑与神》Nicolas Poussin（上）</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/11/n13225731.md#1">乱世在劫妖魔出 张天师承命振天纲</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/3/n13207782.md#1">【人生之钥】清代商人用什么巧方教子成材？</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220766.md#1">史上一只黑天鹅预告一场巨变  五行学说真玄妙</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/8/n13220263.md#1">【古韵流芳】晏殊《浣溪沙》花落燕归来的理趣</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/5/n13212383.md#1">修身齐家为国尽职 唐名臣柳公绰有古之遗风</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/31/n13200714.md#1">高智晟先生步入社会时经历的人心冷暖（下）</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/7/n13217507.md#1">【未解之谜】预言死亡 最离奇轮回故事</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/3/n13209078.md#1">【百年真相】“大爱”还是惨剧？三千孤儿入内蒙真相</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
